--- a/style.css
+++ b/style.css
@@ -2,19 +2,20 @@
   background-blend-mode: overlay;
   background-color: rgba(25, 27, 27, 0.664);
 }
-@media screen and (max-width: 768px) {
-  .heading-font {
-    font-size: 1.75rem;
-  }
-  .paragraph-font {
-    font-size: 0.75rem !important;
-  }
-}
-@media screen and (min-width: 768px) {
-  .card-img {
-    height: 180px;
 
-    object-fit: cover;
-    object-position: center left;
-  }
+.card-img {
+  height: 200px;
+
+  object-fit: cover;
+  object-position: center left;
+}
+
+.text-responsive {
+  font-size: calc( .8vw + .9vh);
+}
+.display-test{
+  font-size: calc(1rem + .5vw + 1.75vw);
+}
+.position{
+  font-size: 10px;
 }
